--- a/index.html
+++ b/index.html
@@ -1059,11 +1059,6 @@
             <img src="./imeges/pil-textile-mobail@1x.jpg" alt="" width="100%" height="100%">
           </picture>
         </div>
-
-        <!-- <ul class="waerhouse__images-box">
-          <li class="waerhouse__images waerhouse__images--one"></li>
-          <li class="waerhouse__images waerhouse__images--two"></li>
-        </ul> -->
       </div>
     </section>
     <!-- QUALITY CONTROL -->
@@ -1180,30 +1175,42 @@
         <h2 class="respons__title default-title">Цікаве</h2>
         <ul class="respons__list" id="respons-list">
           <li class="item">
-            <video class="respons__video" controls preload="metadata">
-              <source src="video.mp4">
-            </video>
+            <div class="respons__video">
+              <iframe width="100%" height="100%" 
+              src="https://www.youtube-nocookie.com/embed/C7HxTErU37g?si=ANEG1Wty6zS7AhoH"
+              frameborder="0" 
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture;" allowfullscreen></iframe>
+            </div>
             <h3 class="respons__list-text">Дизайн однокімнатної квартири 43 кв</h3>
           </li>
 
           <li class="item">
-            <video class="respons__video" controls preload="metadata">
-              <source src="./video-two.mp4">
-            </video>
+            <div class="respons__video">
+              <iframe width="100%" height="100%" 
+              src="https://www.youtube-nocookie.com/embed/6j6Xohh3aCo?si=hKLbGkfLYxBDqn_0"
+              frameborder="0" 
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"></iframe>
+            </div>
             <h3 class="respons__list-text">Сучасна квартира в теплих відтінках, 96м2</h3>
           </li>
 
           <li class="item">
-            <video class="respons__video" controls preload="metadata">
-              <source src="./video-three.mp4">
-            </video>
+            <div class="respons__video">
+              <iframe width="100%" height="100%"
+              src="https://www.youtube-nocookie.com/embed/y7obTLZBuWw?si=w1r7OSKliY_oQhyk"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"></iframe>
+            </div>
             <h3 class="respons__list-text">Огляд ремонту квартири 40м2, відео під час здачі об’єкту</h3>
           </li>
 
           <li class="item">
-            <video class="respons__video" controls preload="metadata">
-              <source src="./video-four.mp4">
-            </video>
+            <div class="respons__video">
+              <iframe width="100%" height="100%"
+              src="https://www.youtube-nocookie.com/embed/5Ao294Vs1vE?si=hW2zN3Lonnbm9MZa"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"></iframe>
+            </div>
             <h3 class="respons__list-text">Рішення, які дешевлять гарний ремонт квартири і якісний дизайн</h3>
           </li>
         </ul>
@@ -1247,6 +1254,113 @@
 
           <label class="radio-box">
             <input type="radio" class="radio all-radio" name="cards" value="card" id="video-radio-four">
+            <span class="radio-icon-box">
+              <svg width="18" height="18" class="radio-icon-click">
+                <use href="./imeges/sprait.svg#radio-click"></use>
+              </svg>
+              <svg width="18" height="18" class="radio-icon">
+                <use href="./imeges/sprait.svg#radio"></use>
+              </svg>
+            </span>
+          </label>
+        </form>
+      </div>
+    </section>
+
+    <section class="our-team">
+      <div class="conteiner">
+        <h3 class="our-team__title default-title">Наша команда</h3>
+        <ul class="our-team__list">
+          <li class="item">
+            <div>
+              <picture>
+                <source 
+                media="(min-width: 1200px)" 
+                srcset="./imeges/our-time-desktop@1x.jpg 1x, ./imeges/our-time-desktop@2x.jpg 2x">
+                <source 
+                media="(max-width: 1199px)" 
+                srcset="./imeges/our-time-mobile@1x.jpg 1x, ./imeges/our-time-mobile@2x.jpg 2x">
+                <img src="./imeges/our-time-mobile@1x.jpg" width="100%" height="100%" alt="Маляр-штукатур">
+              </picture>
+            </div>
+
+            <div class="info-of-master">
+              <p class="master-name">Сергій Волошко</p>
+              <h4 class="description-master">Маляр-штукатур вирівнює та готує.</h4>
+              <p class="description-masters-work">Завдяки Сергію наша команда виконує повний спектр по</p>
+
+              <ul class="info-of-master__list">
+                <li class="item"><p>Штукатурка стін по маякам</p></li>
+
+                <li class="item"><p>Грунтовка стін та стелі</p></li>
+
+                <li class="item"><p>Монтаж натяжних стель</p></li>
+
+                <li class="item"><p>Шпаклівка стін під шпалери</p></li>
+
+                <li class="item"><p>Забарвлення стін</p></li>
+
+                <li class="item"><p>Укладання плитки в с/в</p></li>
+
+                <li class="item"><p>Прокладка електрики</p></li>
+
+                <li class="item"><p>Установка плінтусів та укосів</p></li>
+              </ul>
+            </div>
+          </li>
+        </ul>
+
+        <form action="" class="form-box">
+          <label class="radio-box">
+            <input type="radio" class="radio all-radio check" name="cards" value="card" id="our-time-radio-one">
+            <span class="radio-icon-box">
+              <svg width="18" height="18" class="radio-icon-click">
+                <use href="./imeges/sprait.svg#radio-click"></use>
+              </svg>
+              <svg width="18" height="18" class="radio-icon">
+                <use href="./imeges/sprait.svg#radio"></use>
+              </svg>
+            </span>
+          </label>
+
+          <label class="radio-box">
+            <input type="radio" class="radio all-radio" name="cards" value="card" id="our-time-radio-two">
+            <span class="radio-icon-box">
+              <svg width="18" height="18" class="radio-icon-click">
+                <use href="./imeges/sprait.svg#radio-click"></use>
+              </svg>
+              <svg width="18" height="18" class="radio-icon">
+                <use href="./imeges/sprait.svg#radio"></use>
+              </svg>
+            </span>
+          </label>
+
+          <label class="radio-box">
+            <input type="radio" class="radio all-radio" name="cards" value="card" id="our-time-radio-three">
+            <span class="radio-icon-box">
+              <svg width="18" height="18" class="radio-icon-click">
+                <use href="./imeges/sprait.svg#radio-click"></use>
+              </svg>
+              <svg width="18" height="18" class="radio-icon">
+                <use href="./imeges/sprait.svg#radio"></use>
+              </svg>
+            </span>
+          </label>
+
+          <label class="radio-box">
+            <input type="radio" class="radio all-radio" name="cards" value="card" id="our-time-radio-four">
+            <span class="radio-icon-box">
+              <svg width="18" height="18" class="radio-icon-click">
+                <use href="./imeges/sprait.svg#radio-click"></use>
+              </svg>
+              <svg width="18" height="18" class="radio-icon">
+                <use href="./imeges/sprait.svg#radio"></use>
+              </svg>
+            </span>
+          </label>
+
+          <label class="radio-box">
+            <input type="radio" class="radio all-radio" name="cards" value="card" id="our-time-radio-five">
             <span class="radio-icon-box">
               <svg width="18" height="18" class="radio-icon-click">
                 <use href="./imeges/sprait.svg#radio-click"></use>
